# debinst

./: .gitignore  .gitmodules  0install.sh  1buildpackage.sh  2simplecdd.sh  3packer.sh  4updaterepo.sh  5export.sh  5updaterepo.sh  Makefile  README.md  TODO  TODO.md  armbian.sh  install-00-pkg.sh  install-00-sudoers.sh  install-01-pkg.sh  install-01-sudoers.sh  install-02-bashrc.sh  install-03-screen.sh  install-04-fstab.sh  install-05-clean.sh  install-06-last.sh  install-07-panel.sh  install-08-screensaver.sh  install-10-vimrc.sh  install-11-emacs.el  install-11-emacs.sh  install-12-latex.sh  install-13-fonts.sh  install-14-cal.sh  install-14-pdfxup.sh  install-15-tock.sh  install-16-latex-ex.sh  install-17-rdm.sh  install-21-w3m.sh  install-22-tmp.sh  install-23-numlockx.sh  install-24-nocap.sh  install-25-rfkill.sh  (+84 more)
2simplecdd/: simplecdd.mk
3packer/: Makefile  README.md  Vagrantfile  packer.json  preseed.cfg  script.sh  shortcut.ps1  shortcut.sh  vagrantssh.sh  vagrantup.sh
4livebuild/: Makefile  cups.desktop  user-config-pc-b1.mk
5livebuild/: Makefile  README.md  autostart-pc-b1  user-config-pc-b1.mk
armbian/: Makefile  README.md  find-ip.sh  install-00-pkg.sh  install-00-pkg.txt  install-01-sudoers.sh  install-02-bashrc.sh  install-05-asoundrc.sh  install-06-ledctl.sh  install-10-WiringPi.sh  install-11-mraa.sh  install-12-upm.sh  install-13-overlay.sh  install-30-readonly.sh  install-ex-mps.sh  install-op-fail2ban.sh  install-op-lirc.sh  install-op-mp3server-bin.sh  install-op-mp3server-mnt.sh  install-op-mpd.sh  install-op-mps.sh  install-op-ntp.sh  install-op-oled.sh  install-op-rtc.sh  install-op-shutter.sh  install-op-staticmac.sh  install-op-volume.sh  install-op-xmms.sh  kernel_4.4.md  mp3-ex-toggle.sh  mp3-op-toggle.sh  mps-ex-toggle.sh  overlay-nanopineo.dts  overlay-orangepizero.dts  overlay-rockpi-s.dts  rk3308-disable-uart2-uart4.dts
buildpackage-op-1/: list.txt  prepare.sh
buildpackage-op-2min/: list.txt
cicd/: README.md
cicd/mpclient/: CMakeLists.txt  Client.cpp  Client.h  Input.cpp  Input.h  Makefile  Output.cpp  Output.h  README.md  README.template.md  Terminal.h  common.cpp  common.h  gitlab-ci.yml  log.h
cicd/mps/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Client.cpp  Client.h  Input.cpp  Input.h  List.cpp  List.h  Makefile  Output.cpp  Output.h  Player.cpp  Player.h  README.md  README.template.md  Server.cpp  Server.h  Terminal.h  abstractstubserver.h  client.php  client.py  cppcheck.supp  expect.py  gitlab-ci-local.yml  gitlab-ci-pbuilder.yml  gitlab-ci-release.yml  gitlab-ci-sbuild.yml  gitlab-ci.yml  include.cmake  mpclient.1  mpclient.cpp  mpserver.1  mpserver.cpp  mpssaver.1  mpssaver.cpp  oledmesg.1  oledmesg.cpp  path.cpp  path.h  (+4 more)
cicd/mps/.forgejo/workflows/: build.yml
cicd/mps/data/: mpclient.service  mpserver.service  mpssaver.service
cicd/mps/debian/: changelog  control  copyright  mpclient.service  mps.install  mps.manpages  mpssaver.service  rules  shlibs.local
cicd/mps/debian-debian12/: rules
cicd/mps/debian-debian13/: shlibs.local
cicd/mps/debian-nr/: changelog  control  copyright  mpclient.1  mpclient.service  mps.install  mps.manpages  mpserver.1  mpserver.service  mpssaver.1  mpssaver.service  oledmesg.1  shlibs.local
cicd/mps/kicad/: Makefile  remoteControl.kicad_pcb  remoteControl.kicad_prl  remoteControl.kicad_pro  remoteControl.kicad_sch  remoteControl.net  remoteControl.tex  sym-lib-table
cicd/project/: CMakeLists.txt  Makefile  gitlab-ci.yml  mainwindow.cpp  mainwindow.h  messagejob.cpp  messagejob.h  mqexception.h  project.pro
cicd/project1/: CMakeLists.txt  Makefile  client.py  cppcheck.supp  gitlab-ci-local.yml  gitlab-ci.yml  main.cpp  mainwindow.cpp  mainwindow.h  messagejob.h  mqexception.h  project-one.pro  project1.pro  test1.exp
cicd/project1/debian/: rules
cicd/project1/debian-nr/: project-one.install
cicd/project3/: CMakeLists.txt  gitlab-ci-local.yml  gitlab-ci.yml  main.cpp  test1.exp
cicd/project4/: CMakeLists.txt  Makefile  README.md  README.template.md  client.php  client.py  expect.py  gitlab-ci-local.yml  gitlab-ci.yml  main.cpp  spec.json  test1.exp  test2.exp  test4.exp  test5.exp  test6.py  wait.py
cicd/project4/debian-nr/: project-four.install  shlibs.local
cicd/project5/: CMakeLists.txt  client.cpp  gitlab-ci-local.yml  gitlab-ci.yml  server.cpp  test1.exp
cicd/project6/: CMakeLists.txt  Makefile  client.cpp  client.h  gitlab-ci-local.yml  gitlab-ci.yml  server.cpp  server.h  test1.exp  test2.exp
cicd/project6/data/: project-six.service
cicd/project6/debian/: shlibs.local
cicd/project6/debian-nr/: project-six.install
cicd/project8/: CMakeLists.txt  Server.cpp  Server.h  client.cpp  gitlab-ci-local.yml  gitlab-ci.yml  main.cpp  test1.exp  test2.exp
cicd/project8/debian/: rules  shlibs.local
cicd/project8/debian-nr/: project-eight.install
cicd/project9/: CMakeLists.txt  Makefile  client.cpp  client.py  gitlab-ci-local.yml  gitlab-ci.yml  server.cpp  test1.exp  test2.exp
doc/: custom.md  mutool.md  no-kernel-modules-were-found.md
hardware/: install-op-alsa-order.sh  install-op-fix-hd-apm.sh  (+21 more)
projects/arm/adc/rp2350-eth/: CMakeLists.txt  client.py  main.c
projects/arm/adc/rp2350-eth/examples/: CH9120_Test.h  CMakeLists.txt  RP2350_ETH_CH9120_test.c
projects/arm/adc/rp2350-eth/lib/CH9120/: CH9120.h  CMakeLists.txt
projects/mp3server/: CMakeLists.txt  Makefile  README.md  common.c  common.h  cppcheck.supp  cppcheck.txt  html.c  html.h  httpServer.c  include.cmake  lirc.c  log.c  log.h  mp3client-button.c  mp3client-lcd16x2.c  mp3client-lirc.c  mp3client-oled.cpp  mp3client-rpi.c  mp3client-rps.c  mp3client-term.c  mp3client.c  mp3client.h  mp3server.c  mp3server.h  mp3server.service  mp3serverd  oled-clear.cpp  oled-message.cpp  oled.cpp  oscreensaver.c  oscreensaver.mk  oscreensaver.service  player-mpd.c  player-xmms.c  player.c  player.h  resources.c  setup.c  test-buffer.c  (+1 more)
projects/rp2350-eth/adc/: CMakeLists.txt  Makefile  help.sh  main.c
projects/rp2350-eth/rc-switch/: CMakeLists.txt  Makefile  help.sh  main.c  rc-switch.pio
(+1388 files in other folders)
